# smoothie-reader

./: .gitignore  CLAUDE.md  GEMINI.md  book.epub  export_txt.py  pack.sh  pyproject.toml  reader3.py  requirements.txt  server.py  setup.sh  start.sh
book_data/: book.pkl  book.txt
pg84-images_data/: book.pkl
templates/: library.html  pdf_reader.html  reader.html
