[project]
name = "reader3"
version = "0.1.0"
description = "Simple EPUB reader web app"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "dashscope>=1.25.12",
    "ebooklib>=0.20",
    "edge-tts>=7.2.7",
    "fastapi>=0.121.2",
    "google-genai>=1.0.0",
    "httpx[socks]>=0.28.1",
    "jinja2>=3.1.6",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.22",
    "uvicorn>=0.38.0",
]
